<resources>
    <string name="app_name">單字即時通</string>
    <string name="tab_label_importer">讀取 / 更新</string>
    <string name="tab_label_vocabularies">單字列表</string>
    <string name="tab_label_exam">單字考試</string>
    <string name="action_settings">設定</string>
    <string name="common_ok">確定</string>
    <string name="loading_message">讀取中…</string>
    <string name="import_excel_complete">匯入%d筆單字</string>
    <string name="import_excel_failed">匯入單字失敗</string>
    <string name="import_excel_failed_empty">匯入單字失敗，因為Excel sheets為空</string>
    <string name="import_excel_failed_word_list_empty">匯入單字失敗，因為沒有單字</string>
    <string name="import_excel_insert_failed">單字集匯入資料庫失敗</string>
    <string name="importer_external_storage_access_required">需要儲存權限才能讀取儲存空間</string>
    <string name="importer_external_storage_permission_not_available">需要取得您的讀寫權限才能正常存取手機檔案，請至"設定"開啟讀寫權限。</string>
    <string name="importer_external_storage_permission_granted">已授權儲存權限，開始選取單字檔案</string>
    <string name="importer_external_storage_permission_denied">儲存權限請求被拒絕</string>
    <string name="failure_cannot_find_words">發生錯誤，找不到單字！</string>
    <string name="dialog_action_ok">確定</string>
    <string name="dialog_action_cancel">取消</string>
    <string name="dialog_error_title">抱歉</string>
    <string name="chooser_title">讀取/更新</string>
    <string name="chooser_choose_btn">選擇檔案</string>
    <string name="chooser_filename">檔案名稱：</string>
    <string name="chooser_filesize">檔案大小：</string>
    <string name="exam_status">資料庫內沒有資料，無法進行自我考試。</string>
    <string name="random">隨機出題</string>
    <string name="menu_drawer">抽屜</string>
    <string name="menu_search">搜尋</string>
    <string name="menu_notifications">通知</string>
</resources>
